-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.308 2008-06-02 20:34:16 guru Exp $
-----------------------------------------------------------------------------------------
2005-06-02	pwessel
	* pslib.c:		ps_polygon can only split line when rgb[0] == -1 not < 0
				since -3 now means to use a fill pattern.
	* pstext.c:		Enhanced -Z+ option expects z-level values in 3rd column
	
2005-06-01	pwessel
	* Win installer:	Now installs the GMT include files so users can build their own
				programs that use the GMT libs

2005-05-29	pwessel
	* grdreformat.c:	There is no longer a share/conf/gmt_formats.conf so the
				grdreformat usage message crashes. Introduced new file
				grdreformat.h created by GNUmakefile to include this info.
				
2005-05-27	pwessel
	* grdfilter.c:		The -D5 did not initialize xscale so filter search box was
				set to region width which typically is much larger.  The bug
				did not affect the results but unnecessarily increased runtime.
2005-05-27	remko
	* pslegend.c:		Let N (number of columns) also affect the printing of labels
	* pslegend.txt:		Made clear that N only affects the printing of symbols and labels

2005-05-22	pwessel
	* gmt_map.c, gmt_init.c:	Added support for enhanced -E option for 3-D perspective
				views which allows the specification of a fixed point (needed for
				creating animations). Updated all programs to use the new option
				and added updated man page and synopsis to all programs.

2005-05-20	pwessel
	* gmt_io.c:		Did not properly apply PLOT_DEGREE_FORMAT=ddd.x for decimal degrees
	* gmt_map.c:		Determining where parallels and meridians intersected the map
				boundary where susceptible to roundoff for very small regions
	* gmt_plot.c:		Checked for map jumps even for non-periodic map boundaries.

2005-05-19	pwessel
	* pscoast.c:		The -Q option should not require -J
	* pstext.c:		Cannot remove blank lines when in paragraph mode as those